--- a/demo/package.json
+++ b/demo/package.json
@@ -1,8 +1,8 @@
 {
   "name": "demo",
   "version": "1.0.0",
-  "description": "karma & vue test project",
-  "author": "shunzizhan",
+  "description": "A Vue.js project",
+  "author": "",
   "private": true,
   "scripts": {
     "dev": "node build/dev-server.js",
@@ -14,16 +14,8 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-es2015": "^6.24.1",
-    "css-loader": "^0.28.7",
-    "karma-webpack": "^2.0.5",
     "vue": "^2.5.2",
-    "vue-loader": "^13.3.0",
-    "vue-router": "^3.0.1",
-    "vue-template-compiler": "^2.5.2",
-    "webpack": "^3.8.1"
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
