--- a/demo/package.json
+++ b/demo/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "vue": "^2.5.2",
+    "vue-i18n": "^7.3.2",
+    "vue-resource": "^1.3.4",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
